# ollama_load_balancer

./: Cargo.toml  Dockerfile  README.md  build.rs  flake.nix
.github/workflows/: pre-release.yml  release.yml  rust.yml
src/: api.rs  backend.rs  config.rs  handler.rs  main.rs  state.rs  utils.rs
test/: test_static_http_post_request.py
