[package]
name = "ollama_load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1.7.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
