[package]
name = "ollama_load_balancer"
version = "1.0.2"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
ordermap = "0.5.3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
