[package]
name = "ollama_load_balancer"
version = "1.0.3"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
ordermap = "0.5.3"
serde = "1.0.218"
serde_json = "1.0.139"
rand = "0.9.0"
chrono = "0.4.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
